# esp-test

./: .gitignore  README.md  partitions_example.csv  sdkconfig  uart_test.elf
.github/workflows/: build.yml  ci.yml
components/: CMakeLists.txt  Makefile  README.md  hello_world_lib.c
main/: Kconfig.projbuild  hello_world_main.c  uart_test_main.c
